# hserv

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: CheckCXX11Features.cmake  c++11-test-raw_string-N2442.cpp
examples/: fileserver.cpp  helloworld.cpp  helloworld_cxx11.cpp  helloworld_ssl.cpp  infinitely.cpp  proxyserver.cpp
hserv/: context.h  fastcgiserver.h  header.h  httpserver.h  httpsserver.h  request.h  response.h  serverinterface.h
hserv/impl/: connection.h  fastcgiconnection.h  fastcgiserverimpl.h  httpconnection.h  httpserverimpl.h  httpsserverimpl.h  requestimpl.h  requestparser.h  responseimpl.h
